--- a/ProyectoNaturAdventureWeb/WebContent/css/style.css
+++ b/ProyectoNaturAdventureWeb/WebContent/css/style.css
@@ -7,3 +7,23 @@
 .centered {
 	text-align: center;
 }
+
+.no-padding {
+	padding: 0;
+}
+
+.auth {
+	padding-left: 15px;
+	padding-top: 15px;
+	padding-bottom: 15px;
+	color: white;
+}
+
+.username {
+	color: #50BC5C;
+}
+
+.centered-form {
+	width: 90%;
+	margin: 0 auto;
+}
