--- a/ProyectoNaturAdventureWeb/WebContent/css/style.css
+++ b/ProyectoNaturAdventureWeb/WebContent/css/style.css
@@ -27,3 +27,27 @@
 	width: 90%;
 	margin: 0 auto;
 }
+
+.btn-padding {
+	margin: 10px;
+}
+
+.left {
+	margin-top: 30px;
+	width: 50%;
+	float: left;
+}
+
+.right {
+	margin-top: 30px;
+	width: 50%;
+	float: left;
+}
+
+.adapter {
+	width: 90%;
+}
+
+.negrita {
+	font-weight: bold;
+}
