--- a/ProyectoNaturAdventureWeb/WebContent/css/style.css
+++ b/ProyectoNaturAdventureWeb/WebContent/css/style.css
@@ -56,3 +56,17 @@
 	margin-left: 20px;
 	margin-right: 20px;
 }
+
+.hidden {
+	display: none;
+}
+
+.visible {
+	display: inherit;
+}
+
+.calendar-icon {
+	cursor: pointer;
+	font-size: 1.7em;
+	padding-top: 5px;
+}
