--- a/ProyectoNaturAdventureWeb/WebContent/css/style.css
+++ b/ProyectoNaturAdventureWeb/WebContent/css/style.css
@@ -74,3 +74,27 @@
 .clear {
 	clear: both;
 }
+
+.activity-container {
+	border: 1px solid;
+	border-radius: 5px;
+	margin: 5px;
+}
+
+.menu-down-right {
+	float: right;
+	padding-top: 40px;
+	cursor: pointer;
+}
+
+.activity-info-left {
+	float: left;
+}
+
+.info-hidden {
+	display: none;
+}
+
+.info-visible {
+	display: inherit;
+}
