--- a/ProyectoNaturAdventureWeb/WebContent/css/styleIndex.css
+++ b/ProyectoNaturAdventureWeb/WebContent/css/styleIndex.css
@@ -124,9 +124,16 @@
 	position: relative;
 	font-family: 'Myriad Pro', 'Myriad', helvetica, arial, sans-serif;
 	letter-spacing: -3px;
+	text-stroke: 2px black;
 	-webkit-text-stroke: 2px black;
-	
+	-moz-text-stroke: 2px black;
+	-o-text-stroke: 2px black;
+	-ms-text-stroke: 2px black;
 	text-shadow: 2px 2px 2px black;
+	-webkit-text-shadow: 2px 2px 2px black;
+	-moz-text-shadow: 2px 2px 2px black;
+	-o-text-shadow: 2px 2px 2px black;
+	-ms-text-shadow: 2px 2px 2px black;
 }
 
 
@@ -135,8 +142,12 @@
 	background-position: center;
 	padding-top: 148px;
 	text-align: center;
-    -webkit-filter: drop-shadow(2px 2px 2px black) drop-shadow(2px 2px 2px black);
+	
 	filter: drop-shadow(2px 2px 0 black) drop-shadow(-2px -2px 0 black);
+    -webkit-filter: drop-shadow(2px 2px 2px black) drop-shadow(2px 2px 2px black);
+	-moz-filter: drop-shadow(2px 2px 2px black) drop-shadow(2px 2px 2px black);
+	-o-filter: drop-shadow(2px 2px 2px black) drop-shadow(2px 2px 2px black);
+	-ms-filter: drop-shadow(2px 2px 2px black) drop-shadow(2px 2px 2px black);
     /*
     
     filter: brightness(40%);
