--- a/ProyectoNaturAdventureWeb/WebContent/css/styleIndex.css
+++ b/ProyectoNaturAdventureWeb/WebContent/css/styleIndex.css
@@ -168,7 +168,7 @@
 }
 
 .iconPage {
-	background: url("../images/icon.png") no-repeat 100%;
+	background: url("../images/icono128v3.png") no-repeat 100%;
 	background-position: center;
 	padding-top: 150px;
 	text-align: center;
