--- a/ProyectoNaturAdventureWeb/WebContent/css/styleIndex.css
+++ b/ProyectoNaturAdventureWeb/WebContent/css/styleIndex.css
@@ -108,10 +108,8 @@
 }
 .headerBackground {
 	width-max: 125%;
-	/*height: 250px;*/
 	height: 270px;
-	background: url("../images/header2.jpg") no-repeat 100%;
-	/*opacity: 0.9;*/
+	background: url("../images/header3.jpg") no-repeat 100%;
 	
 }
 .titlePage {
@@ -121,70 +119,19 @@
 	font-size: 90px;
 	color: #cecece;
 	margin: 0px;
-	/*text-stroke: 2px black;
-	-webkit-text-stroke: 2px black;
-	-moz-text-stroke: 2px black;
-	-o-text-stroke: 2px black;
-	-ms-text-stroke: 2px black;
-	
-	color: white;*/
     text-shadow:
     -2px -2px 0 #000,
     2px -2px 0 #000,
     -2px 2px 0 #000,
     2px 2px 0 #000;
-	/*
-	text-shadow: 2px 3px 1px black;
-	-webkit-text-shadow: 2px 3px 1px black;
-	-moz-text-shadow: 2px 3px 1px black;
-	-o-text-shadow: 2px 3px 1px black;
-	-ms-text-shadow: 2px 3px 1px black;
-	
-	font-family: 'Londrina Solid', cursive;
-	text-align: center;
-	color: #cecece;
-	margin: 0px;
-	font-size: 80px;
-	font-style: italic;
-	font-weight: 400;
-	position: relative;
-	font-family: 'Chicle', cursive;
-	/*font-family: 'Myriad Pro', 'Myriad', helvetica, arial, sans-serif;*/
-	
-	/*
-	
-	letter-spacing: -3px;
-	text-stroke: 2px black;
-	-webkit-text-stroke: 2px black;
-	-moz-text-stroke: 2px black;
-	-o-text-stroke: 2px black;
-	-ms-text-stroke: 2px black;
-	
-	text-shadow: 2px 2px 2px black;
-	-webkit-text-shadow: 2px 2px 2px black;
-	-moz-text-shadow: 2px 2px 2px black;
-	-o-text-shadow: 2px 2px 2px black;
-	-ms-text-shadow: 2px 2px 2px black;*/
+
 }
 
 .iconPage {
-	background: url("../images/icono128v3.png") no-repeat 100%;
+	background: url("../images/icon.png") no-repeat 100%;
 	background-position: center;
 	padding-top: 150px;
 	text-align: center;
-	
-	filter: drop-shadow(2px 2px 2px black) drop-shadow(-2px -2px 2px black);
-    -webkit-filter: drop-shadow(2px 2px 2px black) drop-shadow(2px 2px 2px black);
-	-moz-filter: drop-shadow(2px 2px 2px black) drop-shadow(2px 2px 2px black);
-	-o-filter: drop-shadow(2px 2px 2px black) drop-shadow(2px 2px 2px black);
-	-ms-filter: drop-shadow(2px 2px 2px black) drop-shadow(2px 2px 2px black);
-    /*
-    
-    filter: brightness(40%);
-	-webkit-filter: brightness(20%);
-	-moz-filter: brightness(80%);
-	-o-filter: brightness(80%);
-	-ms-filter: brightness(80%);*/
 }
 
 
