--- a/ProyectoNaturAdventureWeb/WebContent/css/style.css
+++ b/ProyectoNaturAdventureWeb/WebContent/css/style.css
@@ -110,9 +110,11 @@
 }
 
 .button-book-activity {
-	float: right;
+	/*float: right;
 	padding-top: 110px;
-	padding-right: 20px;
+	padding-right: 20px;*/
+	text-align: center;
+	padding: 10px 0px 10px 0px;
 }
 
 .activity-info-left {
@@ -121,6 +123,14 @@
 
 .info-hidden {
 	display: none;
+}
+
+.info-hidden-text {
+	float:left;
+}
+
+.info-hidden-image {
+	float:right;
 }
 
 .info-visible {
