--- a/ProyectoNaturAdventureWeb/WebContent/css/style.css
+++ b/ProyectoNaturAdventureWeb/WebContent/css/style.css
@@ -65,6 +65,11 @@
 	float: left;
 }
 
+.float-right {
+	float: right;
+	width: 70%;
+}
+
 .adapter {
 	width: 90%;
 }
@@ -172,6 +177,29 @@
 
 .detail-row {
 	padding: 5px;
+}
+
+.book-left {
+	margin-top: 30px;
+	width: 65%;
+	float: left;
+}
+
+.book-right {
+	margin-top: 30px;
+	width: 35%;
+	float: left;
+}
+
+.help {
+	float: right;
+	font-size: 15px;
+	padding-top: 20px;
+	padding-right: 20px;
+}
+
+.height-nav {
+	height: 60px;
 }
 
 .navbar {
