--- a/ProyectoNaturAdventureWeb/WebContent/css/styleHelp.css
+++ b/ProyectoNaturAdventureWeb/WebContent/css/styleHelp.css
@@ -6,10 +6,11 @@
 
 .info-help-text {
 	float:right;
-	width: 70%;
+	width: 60%;
 	text-align: justify;
     text-justify: inter-word;
     padding: 20px;
+    font-size: 15px;
 }
 
 .info-help-nav {
